# rosetta-assembler

./: .gitignore  LICENSE  README.md  config.py  main.py  pyproject.toml  requirements-dev.txt
bundler/: file_handler.py  filter.py  utils.py
src/: cloner.py  config.py  main.py
src/bundler/: config.py  core.py  file_handler.py  filter.py  heuristics.py  utils.py
tests/: test_file_handler.py  test_filter.py
